k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-test-demo
  labels:
    app: kuber-test-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuber-test-demo
  template:
    metadata:
      labels:
        app: kuber-test-demo
    spec:
      containers:
        - name: app
          # Docker Hub: docker.io/<USERNAME>/kuber-test-demo:latest
          # GHCR: ghcr.io/<ORG>/kuber-test-demo:latest — build/push qiling, keyin shu image ni yozing
          image: docker.io/feruzlabs/kuber-test-demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8010
          startupProbe:
            httpGet:
              path: /api-docs
              port: 8010
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 24
          livenessProbe:
            httpGet:
              path: /api-docs
              port: 8010
            initialDelaySeconds: 0
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api-docs
              port: 8010
            initialDelaySeconds: 0
            periodSeconds: 5
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
