k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-test-demo
  labels:
    app: kuber-test-demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8010
      protocol: TCP
      name: http
  selector:
    app: kuber-test-demo
